changed: SpeedDB, both dashboards, color scheme, added button for admin, overall optimization for every platfrom and enhance performance of website

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #007bff;
+    --foreground: #181818;
   }
 }
 
